Flip tassert on index not found in ix_scan.cpp to uassert

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • QE 2024-09-30
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In some cases, SBE plan cache is cleared on index drop before another thread running a dependent query can find the required index. We should flip this to a uassert. This happens in the prepare stage and flipping it to a uassert will make the behavior consistent with the yielding logic in getNext.

            Assignee:
            Adi Agrawal (Inactive)
            Reporter:
            Adi Agrawal (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: