SERVER-94903 Change tassert to uassert when index not found in ix_scan.cpp (#27184)

GitOrigin-RevId: 6ff2c42b5c37704e0459575bdbbdb7a03c9b22b1